--- a/house_price_lee.ipynb
+++ b/house_price_lee.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importing Packages"
+    "## Importing Packages"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load and Inspect Data"
+    "## Load and Inspect Data"
    ]
   },
   {
@@ -1206,7 +1206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Check Missingness"
+    "## Check Missingness"
    ]
   },
   {
@@ -1565,7 +1565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Duplicates?"
+    "## Duplicates?"
    ]
   },
   {
@@ -1592,7 +1592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Correlations between SalesPrice and Other Features\n"
+    "## Correlations between SalesPrice and Other Features\n"
    ]
   },
   {
@@ -1655,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1677,13 +1677,14 @@
     }
    ],
    "source": [
+    "# Showing Features with Object type\n",
     "print(\"Features of Object Type:\")               \n",
     "print(train_df_raw.dtypes[(train_df_raw.dtypes == 'object')].index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1695,7 @@
        " <a list of 10 Text major ticklabel objects>)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1949,7 +1950,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train/Dev Data with a few features"
+    "## Train/Dev Data with a few features + ML Model"
    ]
   },
   {
@@ -2209,7 +2210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train/Dev Data with all columns"
+    "## Train/Dev Data with all columns + ML Model"
    ]
   },
   {
