double checked data formatting section

--- a/LeeNusaputraSawasaki_FinalProject.ipynb
+++ b/LeeNusaputraSawasaki_FinalProject.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "[2 rows x 81 columns]"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,7 +1484,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1f142643a08>"
+       "<seaborn.axisgrid.FacetGrid at 0x1da327a9f48>"
       ]
      },
      "execution_count": 9,
@@ -1940,37 +1940,57 @@
     "\n",
     "After EDA, we have determined several features that may be dropped due to large amounts of missing/NaN data. Other features with missing/NaN data will be converted to None or 0 value so that the feature may still be used in our model.  \n",
     "\n",
-    "Categorical data will be separated to nominal and ordinal. Nominal data will be converted to dummy variables while ordinal data will be converted to integers that include the ordering of the data.  \n",
+    "Categorical data will be separated to ordinal and nominal. Ordinal data will be converted to integers that include the ordering of the data. Nominal data will be converted to dummy variables.  \n",
     "\n",
-    "Finally, we will standard scale all the independent features while leaving the dependent feature (saleprice) alone."
+    "Finally, we will standard scale all of the independent features while leaving the dependent feature (saleprice) alone."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Data Dropped Columns Shape: (1460, 76)\n",
-      "Test Data Dropped Columns Shape: (1459, 75)\n"
+      "Train Shape: (1460, 81)\n",
+      "Test Shape: (1459, 80)\n"
      ]
     }
    ],
    "source": [
-    "#Dropping top 5 most missing/NaN features:\n",
-    "top_5_missing = ['PoolQC', 'MiscFeature', 'Alley', 'Fence', 'FireplaceQu']\n",
-    "train_df_raw2 = train_df_raw.drop(top_5_missing,axis=1)\n",
-    "test_df_raw2 = test_df_raw.drop(top_5_missing,axis=1)\n",
-    "print(\"Train Data Dropped Columns Shape:\", train_df_raw2.shape)\n",
-    "print(\"Test Data Dropped Columns Shape:\", test_df_raw2.shape)"
+    "# ORIGINAL DATA SIZE FOR REFERENCE\n",
+    "print(\"Train Shape:\", train_df_raw.shape)\n",
+    "print(\"Test Shape:\", test_df_raw.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Data Dropped Top 5 Missing/NaN Columns Shape: (1460, 76)\n",
+      "Test Data Dropped Top 5 Missing/NaN Columns Shape: (1459, 75)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# DROPPING TOP 5 MOST MISSING/NAN FEATURES:\n",
+    "top_5_missing = ['PoolQC', 'MiscFeature', 'Alley', 'Fence', 'FireplaceQu']\n",
+    "train_df_raw2 = train_df_raw.drop(top_5_missing,axis=1)\n",
+    "test_df_raw2 = test_df_raw.drop(top_5_missing,axis=1)\n",
+    "print(\"Train Data Dropped Top 5 Missing/NaN Columns Shape:\", train_df_raw2.shape)\n",
+    "print(\"Test Data Dropped Top 5 Missing/NaN Columns Shape:\", test_df_raw2.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -1979,13 +1999,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of train2 features with missing data: 0\n",
-      "Number of test2 features with missing data: 0\n"
+      "Number of train features (after replacing NaN data) with missing data: 0\n",
+      "Number of test features (after replacing NaN data) with missing data: 0\n"
      ]
     }
    ],
    "source": [
-    "#Convert NaN data to 0 or None\n",
+    "# CONVERTING NAN DATA TO 0 OR NONE\n",
     "\n",
     "#Numerical Data to 0\n",
     "numerical_NaN = ['LotFrontage','MasVnrArea','BsmtFinSF1','BsmtFinSF2','BsmtUnfSF',\n",
@@ -2005,19 +2025,19 @@
     "# Check if it worked by checking Missingness\n",
     "dftrain_missing = train_df_raw2.isnull().sum(axis=0)[train_df_raw2.isnull().sum(axis=0) != 0] # TRAINING DATA MISSINGNESS \n",
     "dftest_missing = test_df_raw2.isnull().sum(axis=0)[test_df_raw2.isnull().sum(axis=0) != 0] # TEST DATA MISSINGNESS\n",
-    "print(\"Number of train2 features with missing data:\", len(dftrain_missing))\n",
-    "print(\"Number of test2 features with missing data:\", len(dftest_missing))"
+    "print(\"Number of train features (after replacing NaN data) with missing data:\", len(dftrain_missing))\n",
+    "print(\"Number of test features (after replacing NaN data) with missing data:\", len(dftest_missing))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Convert ordinal data to integers to include ordering of data by mapping\n",
+    "# CONVERT ORDINAL DATA TO INTEGERS TO INCLUDE ORDERING OF DATA\n",
     "\n",
-    "# 1 is best, largest number is worse\n",
+    "# 1 is best, largest number is worse, use mapping\n",
     "train_df_raw2['Functional']=train_df_raw2['Functional'].map({'Typ':1,'Min1':2,'Min2':3,'Mod':4,'Maj1':5,'Maj2':6,'Sev':7,'Sal':8,'None':9})\n",
     "train_df_raw2['BsmtQual']=train_df_raw2['BsmtQual'].map({'Ex':1,'Gd':2,'TA':3,'Fa':4,'Po':5,'NA':6,'None':6})\n",
     "train_df_raw2['BsmtCond']=train_df_raw2['BsmtCond'].map({'Ex':1,'Gd':2,'TA':3,'Fa':4,'Po':5,'NA':6,'None':6})\n",
@@ -2043,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2055,63 +2075,61 @@
     }
    ],
    "source": [
-    "#Convert nominal data to dummies\n",
+    "# CONVERT NOMINAL DATA TO DUMMIES\n",
     "\n",
-    "\"\"\" Running get_dummies on train and test data separately would not work because some data could be\n",
-    "missing in training from data and vice versa.  Therefore, we will combine all data and get_dummies. \n",
+    "\"\"\" Running get_dummies on train and test data separately would not work because some training data could be\n",
+    "missing in test data and vice versa.  Therefore, we will combine all data and get_dummies. \n",
     "Reference: https://stackoverflow.com/questions/56738267/how-can-i-align-pandas-get-dummies-across-training-validation-testing \n",
     "\"\"\"\n",
     "all_data = pd.concat([train_df_raw2, test_df_raw2]) \n",
     "all_data_dummy = pd.get_dummies(all_data)\n",
     "print(\"all_data shape:\", all_data_dummy.shape)\n",
     "\n",
-    "#We cannot split the data back to train and test yet, because standardizing features has the same issue"
+    "#We cannot split the data back to train, dev, and test yet, because standardizing features has the same issue"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of all_data X: (2919, 240)\n",
-      "Shape of all_data Y: (2919,)\n",
+      "Shape of all_data (dummies) X: (2919, 240)\n",
+      "Shape of all_data (dummies) Y: (2919,)\n",
       "Shape of standardized X: (2919, 240)\n",
       "Shape of standardized X plus SalePrice column: (2919, 241)\n"
      ]
     }
    ],
    "source": [
-    "# Standard Scale the data\n",
+    "# STANDARD SCALE THE DATA\n",
     "\n",
     "#First pull out SalePrice column since we won't be standard scaling the dependent feature\n",
     "X=all_data_dummy.drop(['SalePrice'],axis=1)\n",
     "Y=all_data_dummy['SalePrice']\n",
-    "print(\"Shape of all_data X:\", X.shape)\n",
-    "print(\"Shape of all_data Y:\", Y.shape)\n",
+    "print(\"Shape of all_data (dummies) X:\", X.shape)\n",
+    "print(\"Shape of all_data (dummies) Y:\", Y.shape)\n",
     "#X.head(1)\n",
     "\n",
     "#Standard Scale!\n",
     "scaler=StandardScaler()\n",
-    "X_std=pd.DataFrame(scaler.fit_transform(X))\n",
+    "X_std=pd.DataFrame(scaler.fit_transform(X))      #only standard scaled independent features\n",
     "print(\"Shape of standardized X:\", X_std.shape)\n",
     "#X_std.head(1)\n",
     "\n",
     "#Add the Sale Price feature column back into all_data\n",
     "all_data_std = X_std\n",
-    "all_data_std = all_data_std.assign(SalePrice = list(Y))\n",
+    "all_data_std = all_data_std.assign(SalePrice = list(Y))  #adds SalePrice data back in\n",
     "print(\"Shape of standardized X plus SalePrice column:\", all_data_std.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2206,7 +2224,7 @@
        "[1 rows x 240 columns]"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2217,10 +2235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2309,7 +2325,7 @@
        "[1 rows x 240 columns]"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2320,10 +2336,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2412,7 +2426,7 @@
        "[1 rows x 241 columns]"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2423,26 +2437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Shape: (1460, 81)\n",
-      "Test Shape: (1459, 80)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Train Shape:\", train_df_raw.shape)\n",
-    "print(\"Test Shape:\", test_df_raw.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2459,7 +2454,7 @@
     }
    ],
    "source": [
-    "# Split all_data to Train/Test. Then Split train to test/dev.\n",
+    "# SPLIT ALL_DATA TO TRAIN/TEST. THEN SPLIT TRAIN TO TEST/DEV.\n",
     "\n",
     "# Split all_data to Train/Test\n",
     "train_raw2, test_raw2 = train_test_split(all_data_std, test_size=1459/2919, shuffle=False)\n",
@@ -2480,19 +2475,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# SUMMARY OF DATA\n",
     "\n",
-    "'''\n",
-    "\"train_data\"    = Training Data\n",
-    "\"train_labels\"  = Training Labels\n",
-    "\"dev_data\"      = Development Data (to check accuracy of Machine Learning models)\n",
-    "\"dev_labels\"    = Development Labels (to check accuracy of Machine Learning models)\n",
-    "\"test_data\"     = Test Data (to predict housing price for submitting to Kaggle)\n",
-    "'''"
+    "# \"train_data\"    = Training Data\n",
+    "# \"train_labels\"  = Training Labels\n",
+    "# \"dev_data\"      = Development Data (to check accuracy of Machine Learning models)\n",
+    "# \"dev_labels\"    = Development Labels (to check accuracy of Machine Learning models)\n",
+    "# \"test_data\"     = Test Data (to predict housing price for submitting to Kaggle)\n"
    ]
   }
  ],
