--- a/house_price_lee.ipynb
+++ b/house_price_lee.ipynb
@@ -63,6 +63,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
